--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ipfs-pubsub-peer-monitor": "0.0.9",
     "it-all": "latest",
     "js-file-downloader": "^1.1.6",
-    "libp2p-webrtc-star": "latest",
+    "libp2p-webrtc-star": "0.18.0",
     "node-downloader-helper": "^1.0.12",
     "quasar": "^1.0.0",
     "serve-static": "^1.14.1",
@@ -40,7 +40,6 @@
     "eslint-config-prettier": "^4.0.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-vue": "^6.1.2",
-    "wrtc": "^0.4.4",
     "prettier": "2.0.5"
   },
   "engines": {
